09. semester/MlaskalCompiler/public-ro/mlc/du6/tests/du6-test31.mls
program du6test;

label 1,2,3,4,5,6;

begin
  goto 7;
end.